--- a/src/pages/quack.css
+++ b/src/pages/quack.css
@@ -1,3 +1,17 @@
-.h1{
+div{
+    width: 100%;
+}
+
+h1{
     font-size: 24pt;
+}
+
+button{
+    margin: 0 40%;
+    margin-bottom: 20px;
+}
+
+.img{
+    max-width: 600px;
+    max-height: 600px;
 }
